charts/mediaserver/overseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: "docker.io/linuxserver/overseerr:latest"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 5055
            initialDelaySeconds: 10
            periodSeconds: 20
          ports:
            - name: overseerr-port
              containerPort: 5055
              protocol: TCP
          volumeMounts:
            - name: mediaserver-volume
              mountPath: /config
              subPath: "config/overseerr"
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
        - name: init-files-overseerr
          configMap:
            defaultMode: 493
            name: init-overseerr-cm
