charts/mediaserver/overseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  labels:
    app: overseerr
spec:
  type: ClusterIP
  ports:
    - port: 5055
      targetPort: 5055
      protocol: TCP
      name: overseerr-port
  selector:
    app: overseerr
