charts/mediaserver/overseerr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: overseerr.png
    gethomepage.dev/name: Overseerr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - overseerr.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: overseerr
          namespace: mediaserver
          port: 5055
